--- a/GrupoPV_ProjectFinal/src/main/resources/templates/listarlineasproductos.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/listarlineasproductos.html
@@ -42,13 +42,12 @@
 				   
 				    <tr th:each="p: ${productlines}">
 				      <td th:text="${p.productLine}"></td>
-				      <td th:text="${p.textDescription}"></td>
+				      <td th:text="${p.textDescripton}"></td>
 				      <td th:text="${p.htmlDescription}"></</td>
 				      <td th:text="${p.image}"><img th:src="@{/img/noimageavaiable.png}" class="img-thumbnail imageline" alt="..."></td>
-				     
-				     
-				      	<a class="btn btn-warning" th:href="@{/lineaproducto/editar/}+${p.productLine}"><i class="fas fa-edit"></i></a>
-				      	<a class="btn btn-danger" th:href="@{/lineaproducto/borrar/}+${p.productLine}"><i class="far fa-trash-alt"></i></a>
+				      <td>
+				      <!--  	<a class="btn btn-warning" th:href="@{/lineaproducto/editar/}+${p.productLine}"><i class="fas fa-edit"></i></a>
+				      	<a class="btn btn-danger" th:href="@{/lineaproducto/borrar/}+${p.productLine}"><i class="far fa-trash-alt"></i></a>-->
 				      </td>
 				    </tr>				  
 				  </tbody>
