--- a/GrupoPV_ProjectFinal/src/main/resources/templates/nuevocliente.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/nuevocliente.html
@@ -15,64 +15,68 @@
 		<div class="container mb-5">
 			<div class="row">
 				<div class="col-7 px-auto mx-auto text-center mt-3 mb-4 py-2 border-bottom">
-					<h2><i class="fas fa-user-friends fa-lg"></i>&nbsp;Registro cliente</h2>
+					<h2><i class="fas fa-user-friends fa-lg"></i>&nbsp;Customers registration</h2>
 				</div>
 				<form class="bg-white col-sm-7 p-auto m-auto border">
 					<div class="p-2">
 					  <div class="form-group">
 						  	<div class="p-3">
 						  		<div class="form-group">
-								    <label for="nombreyapellido">Nombre y apellido</label>
+								    <label for="nombreyapellido">Number</label>
 								    <input type="text" class="form-control" id="nombreyapellido" placeholder="Ingresar el nombre y apellido del cliente">
 						  		</div>
 						  		<div class="form-group">
-								    <label for="nombrecontacto">Nombre de contacto</label>
+								    <label for="nombreyapellido">Name</label>
+								    <input type="text" class="form-control" id="nombreyapellido" placeholder="Ingresar el nombre y apellido del cliente">
+						  		</div>
+						  		<div class="form-group">
+								    <label for="nombrecontacto">Contact last name</label>
 								    <input type="text" class="form-control" id="nombrecontacto" placeholder="Ingresar el nombre del contacto del cliente">
 						  		</div>
 						  		<div class="form-group">
-								    <label for="apellidocontacto">Apellido de contacto</label>
+								    <label for="apellidocontacto">Contact first name</label>
 								    <input type="text" class="form-control" id="apellidocontacto" placeholder="Ingresar el apellido del contacto del cliente">
 						  		</div>
 							  	<div class="form-group">
-								    <label for="telefono">Teléfono</label>
+								    <label for="telefono">Phone</label>
 								    <input type="text" class="form-control" id="telefono" placeholder="Ingresar el número de teléfono del cliente">
 							  	</div>
 							  	<div class="form-group">
-								    <label for="direccion">Dirección</label>
+								    <label for="direccion">Address line 1</label>
 								    <input type="text" class="form-control" id="direccion" placeholder="Ingresar la dirección del cliente">
 							  	</div>
 						  		<div class="form-group">
-								    <label for="direccionsecundaria">Dirección secundaria</label>
+								    <label for="direccionsecundaria">Address line 2</label>
 								    <input type="text" class="form-control" id="direccionsecundaria" placeholder="Ingresar una dirección secundaria del cliente">
 						  		</div>
 							  	<div class="form-group">
-								    <label for="ciudad">Ciudad</label>
+								    <label for="ciudad">City</label>
 								    <input type="text" class="form-control" id="ciudad" placeholder="Ingresar la ciudad donde reside cliente">
 							  	</div>
 							  	<div class="form-group">
-								    <label for="estado">Estado</label>
+								    <label for="estado">State</label>
 								    <input type="text" class="form-control" id="estado" placeholder="Ingresar el estado donde reside el cliente">
 							  	</div>
 							  	<div class="form-group">
-								    <label for="cp">Código postal</label>
+								    <label for="cp">Postal code</label>
 								    <input type="text" class="form-control" id="cp" placeholder="Ingresar el codigo postal de lugar donde reside el cliente">
 							  	</div>
 							  	<div class="form-group">
-								    <label for="pais">País</label>
+								    <label for="pais">Country</label>
 								    <input type="text" class="form-control" id="pais" placeholder="Ingresar país donde reside el cliente">
 							  	</div>
 						  		<div class="form-group">
-								    <label for="empleado">Vendedor encargado</label>
+								    <label for="empleado">Sales rep employee number</label>
 								    <select class="form-control" id="empleado">
-									  <option>Seleccione una opción</option>
+									  <option>Select an option</option>
 									</select>								    
 							  	</div>
 							  	<div class="form-group">
-								    <label for="cledito">Credito</label>
+								    <label for="cledito">Credit limit</label>
 								    <input type="number" class="form-control" id="credito" placeholder="Ingresar el credito disponible del cliente">
 							  	</div>
 							  	<div class="mt-4">
-							  		<button type="button" th:href="@{/cliente/nuevo}" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear cliente</button>
+							  		<button type="button" th:href="@{/cliente/nuevo}" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Create customer</button>
 							  	</div>
 								  
 							</div>
