--- a/GrupoPV_ProjectFinal/src/main/resources/templates/nuevoempleado.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/nuevoempleado.html
@@ -78,29 +78,29 @@
 									</select>								    
 							  	</div>
 							  	
-							  	<!-- USER DATA -->
+							  	<!-- USER DATA 
 							  	
 							  	<div class="my-2 p-2 bg-darkgray text-dark text-center">
 							  		<h3><i class="fas fa-user-lock fa-sm"></i>&nbsp;User date</h3>
 							  	</div>
 						  		<div class="form-group">
-								    <label for="jobTitle">Username</label>
-								    <input type="text" class="form-control" id="jobTitle" placeholder="Enter a username">
+								    <label for="username">Username</label>
+								    <input type="text" class="form-control" th:field="*{user.username}" id="username" name="username" placeholder="Enter a username">
 						  		</div>						  	
 						  		<div class="form-group">
 								    <label for="jobTitle">Password</label>
-								    <input type="password" class="form-control" id="jobTitle" placeholder="Enter a user password">
+								    <input type="password" class="form-control" th:field="*{user.password}" id="password" name="password" placeholder="Enter a user password">
 						  		</div>
 							  	<div class="form-group">
 								    <label for="role">Role</label>
-								    <select class="form-control" id="role" name="role">
+								    <select th:field="*{user.role}" class="form-control" id="role" name="role">
 									  <option value="">Select option</option>
 									  <option value="admin">Administrator</option>
 									  <option value="director">Director</option>
 									  <option value="supervisor">Supervisor</option>
 									  <option value="seller">Seller</option>
 									</select>								    
-							  	</div>
+							  	</div>-->
 							  	<div class="mt-4">
 							  		<button type="submit" class="btn bg-info btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Save employee</button>
 									<a th:href="@{/employee/list}" class="btn bg-secondary btn-lg btn-block text-white"><i class="fas fa-ban"></i>&nbsp;Cancel</a>
