--- a/GrupoPV_ProjectFinal/src/main/resources/templates/listaroficinas.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/listaroficinas.html
@@ -29,7 +29,7 @@
 						</form>
 					</div>
 				</div>
-				<table class="table table-striped col-sm-12 bg-light border">
+				<table class="table table-striped col-sm-12 bg-light border text-center">
 				  <thead>
 				    <tr class="bg-buebird text-white">
 				      <th scope="col">Code</th>
