--- a/GrupoPV_ProjectFinal/src/main/resources/templates/listarclientes.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/listarclientes.html
@@ -16,95 +16,46 @@
 			<div class="row">
 				<div class="col-12 mt-3 mb-3 py-2 d-flex bd-highlight mb-3">
 					<div class="p-2 bd-highlight">
-						<h2><i class="fas fa-user-friends fa-lg"></i>&nbsp;Lista de clientes</h2>
+						<h2><i class="fas fa-user-friends fa-lg"></i>&nbsp;List of customers</h2>
 					</div>
 					<div class="p-2 bd-highlight">
-						<button type="button" class="btn btn-info"><i class="fas fa-plus"></i>&nbsp;Crear cliente</button>
+						<a type="button" class="btn btn-info" th:href="@{/customer/new}"><i class="fas fa-plus"></i>&nbsp;Create customer</a>
 					</div>
 					<div class ="ml-auto p-2 bd-highlight">
-						<form class="form-inline">
-						   <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
-						   <button class="btn btn btn-info my-2 my-sm-0" type="submit"><i class="fas fa-search"></i>&nbsp;Buscar</button>
+						<form class="form-inline" th:action="@{/customer/search}" th:method="get">
+						   <input class="form-control mr-sm-2" type="text" id="customernumber" name="customernumber" placeholder="Number" aria-label="Search">
+						   <input class="form-control mr-sm-2" type="text" id="city" name="city" placeholder="City" aria-label="Search">
+						   <button class="btn btn btn-info my-2 my-sm-0" type="submit"><i class="fas fa-search"></i>&nbsp;Search</button>
 						</form>
 					</div>
 				</div>
-				<table class="table table-striped col-sm-12 bg-light border">
+				<table class="table table-striped col-sm-12 bg-light border text-center">
 				  <thead>
 				    <tr class="bg-buebird text-white">
-				      <th scope="col">codigo</th>
-				      <th scope="col">Nombre y apellido</th>
-				      <th scope="col">Teléfono</th>
-				      <th scope="col">Dirección</th>
-				      <th scope="col">Ciudad</th>
-				      <th scope="col">Credito</th>
-				      <th scope="col">Vendedor encargado</th>
-				      <th scope="col">Acciones</th>
+				      <th scope="col">Number</th>
+				      <th scope="col">Full name</th>
+				      <th scope="col">Phone</th>
+				      <th scope="col">Address</th>
+				      <th scope="col">City</th>
+				      <th scope="col">Country</th>
+				      <th scope="col">Seller</th>
+				      <th scope="col">Credit limit</th>
+				      <th scope="col">Action</th>
 				    </tr>
 				  </thead>
 				  <tbody>
-				    <tr>
-				      <th scope="row">1</th>
-				      <td>Mark</td>
-				      <td>Otto</td>
-				      <td>@mdo</td>
-				      <td>Mark</td>
-				      <td>Otto</td>
-				      <td>@mdo</td>
+				    <tr th:each="c: ${customers}">
+				      <td th:text="${c.customerNumber}"></td>
+				      <td th:text="${c.customerName}"></td>
+				      <td th:text="${c.phone}"></td>
+				      <td th:text="${c.addressLine1} + ' ' + ${c.addressLine2}"></td>
+				      <td th:text="${c.city}"></td>
+				      <td th:text="${c.country}"></td>
+				      <td th:text="${c.salesRepEmployeeNumber.lastName} + ' ' + ${c.salesRepEmployeeNumber.firstName}"></td>
+				      <td th:text="${c.creditLimit}"></td>
 				      <td>
-				      	<button type="button" class="btn btn-warning"><i class="fas fa-edit"></i></button>
-				      	<button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>				      
-				      </td>
-				    </tr>
-				    <tr>
-				      <th scope="row">2</th>
-				      <td>Jacob</td>
-				      <td>Thornton</td>
-				      <td>@fat</td>
-				      <td>Jacob</td>
-				      <td>Thornton</td>
-				      <td>@fat</td>
-				      <td>
-				      	<button type="button" class="btn btn-warning"><i class="fas fa-edit"></i></button>
-				      	<button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
-				      </td>
-				    </tr>
-				    <tr>
-				      <th scope="row">3</th>
-				      <td>Larry</td>
-				      <td>the Bird</td>
-				      <td>@twitter</td>
-				      <td>Larry</td>
-				      <td>the Bird</td>
-				      <td>@twitter</td>
-				      <td>
-				      	<button type="button" class="btn btn-warning"><i class="fas fa-edit"></i></button>
-				      	<button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
-				      </td>
-				    </tr>
-				    				    <tr>
-				      <th scope="row">3</th>
-				      <td>Larry</td>
-				      <td>the Bird</td>
-				      <td>@twitter</td>
-				      <td>Larry</td>
-				      <td>the Bird</td>
-				      <td>@twitter</td>
-				      <td>
-				      	<button type="button" class="btn btn-warning"><i class="fas fa-edit"></i></button>
-				      	<button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
-				      </td>
-				    </tr>
-				    				    <tr>
-				      <th scope="row">3</th>
-				      <td>Larry</td>
-				      <td>the Bird</td>
-				      <td>@twitter</td>
-				      <td>Larry</td>
-				      <td>the Bird</td>
-				      <td>@twitter</td>
-				      <td>
-				      	<button type="button" class="btn btn-warning"><i class="fas fa-edit"></i></button>
-				      	<button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
+				      	<a class="btn btn-warning" th:href="@{/customer/edit/}+${c.customerNumber}"><i class="fas fa-edit"></i></a>
+				      	<a class="btn btn-danger" th:href="@{/customer/delete/}+${c.customerNumber}"><i class="far fa-trash-alt"></i></a>				      
 				      </td>
 				    </tr>
 				  </tbody>
@@ -112,7 +63,7 @@
 			</div>
 		</div>
 		
-		<footer th:insert="layout/footer :: footer"></footer>
+		<footer class="fixed-bottom" th:insert="layout/footer :: footer"></footer>
 		
 		<script type="text/javascript" th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
 		<script type="text/javascript" th:src="@{/webjars/popper.js/1.16.0/popper.min.js}"></script>
