task:Product revisar

--- a/GrupoPV_ProjectFinal/src/main/resources/templates/layout/header.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/layout/header.html
@@ -60,20 +60,21 @@
 							       <i class="fas fa-boxes">&nbsp;</i>Product
 							    </a>
 								<div class="dropdown-menu bg-darkcyan">
-									<a class="dropdown-item text-white hoverlink hoverlink" th:href="@{/lineaproducto/nuevo}">New product</a>
-									<a class="dropdown-item text-white hoverlink hoverlink" th:href="@{/lineaproducto/listar}">List of products</a>
-<!--
-							        <i class="fas fa-clipboard-list"></i>&nbsp;Productos
+									<a class="dropdown-item text-white hoverlink hoverlink" th:href="@{/producto/nuevo}">New product</a>
+									<a class="dropdown-item text-white hoverlink hoverlink" th:href="@{/producto/listar}">List of products</a>
+
+							     </div>
+						    </li>
+						    	
+						    	<li class="nav-item dropdown ">
+							    <a class="nav-link dropdown-toggle text-white hoverlink" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							       <i class="fas fa-boxes">&nbsp;</i>Linea de Producto
 							    </a>
 								<div class="dropdown-menu bg-darkcyan">
-									<a class="dropdown-item text-white hoverlink hoverlink">Nuevo producto</a>
-									<a class="dropdown-item text-white hoverlink hoverlink">Lista de productos</a>
-									<a class="dropdown-item text-white hoverlink">Nuevo linea de Productos</a>
-									<a class="dropdown-item text-white hoverlink">Lista de linea de Productos</a>-->
-
-								</div>
-						    </li>
-						   
+									<a class="dropdown-item text-white hoverlink hoverlink" th:href="@{/lineaproducto/nuevo}">New product</a>
+									<a class="dropdown-item text-white hoverlink hoverlink" th:href="@{/lineaproducto/listar}">List of  productslines</a>
+						   </div>
+						   </li>
 						    <li class="nav-item dropdown ">
 							    <a class="nav-link dropdown-toggle text-white hoverlink hoverlink" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							        <i class="fas fa-coins">&nbsp;</i>Payments
