--- a/GrupoPV_ProjectFinal/src/main/resources/templates/eliminarlineaproducto.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/eliminarlineaproducto.html
@@ -23,11 +23,11 @@
 						<br>
 						<div class="my-4">
 							<span class="font-weight-bolder">Are you sure to delete the following record?</span>
-							<p>Product line: <!-- <span th:text="${productlines.productLine}" </span>--></p>
+							<p>Product line: <span th:text="${productlines.productLine}" ></span></p>
 						</div>
 						<div class="my-3">
-							<!--  <button type="button" th:href="@{/productline/list}" class="btn btn-info mx-3"><i class="fas fa-ban"></i>&nbsp;Cancel</button>
-							<button type="button" th:href="@{/productline/delete/confirm}+${productlines.productLine}" class="btn btn-danger mx-3"><i class="far fa-trash-alt"></i>&nbsp;Delete</button>-->
+							<a type="button" th:href="@{/lineaproducto/listar}" class="btn btn-info mx-3"><i class="fas fa-ban"></i>&nbsp;Cancel</a>
+						<a type="button" th:href="@{/lineaproducto/borrar/confirmar/}+${productlines.productLine}"  class="btn btn-danger mx-3"><i class="far fa-trash-alt"></i>&nbsp;Delete</a>
 						</div>
 					</div>
 				</div>
