--- a/GrupoPV_ProjectFinal/src/main/resources/templates/eliminarproducto.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/eliminarproducto.html
@@ -26,8 +26,9 @@
 							<p>Product code: <!-- <span th:text="${products.productCode}" </span>--></p>
 						</div>
 						<div class="my-3">
-							<!--  <button type="button" th:href="@{/product/list}" class="btn btn-info mx-3"><i class="fas fa-ban"></i>&nbsp;Cancel</button>
-							<button type="button" th:href="@{/product/delete/confirm}+${products.productCode}" class="btn btn-danger mx-3"><i class="far fa-trash-alt"></i>&nbsp;Delete</button>-->
+							
+						<a type="button" th:href="@{/producto/listar}" class="btn btn-info mx-3"><i class="fas fa-ban"></i>&nbsp;Cancel</a>
+						<a type="button" th:href="@{/producto/borrar/confirmar/}+${products.productCode}"  class="btn btn-danger mx-3"><i class="far fa-trash-alt"></i>&nbsp;Delete</a>
 						</div>
 					</div>
 				</div>
