--- a/GrupoPV_ProjectFinal/src/main/resources/templates/listarlineasproductos.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/listarlineasproductos.html
@@ -19,7 +19,7 @@
 						<h2><i class="fas fa-boxes  fa-lg"></i>&nbsp;Listar lineas de productos</h2>
 					</div>
 					<div class="p-2 bd-highlight">
-						<button type="button" class="btn btn-info"><i class="fas fa-plus"></i>&nbsp;Crear linea de producto</button>
+						<a class="btn btn-info" th:href="@{/lineaproducto/nuevo}"><i class="fas fa-plus"></i>&nbsp;Create Productline</a>
 					</div>
 					<div class ="ml-auto p-2 bd-highlight">
 						<form class="form-inline">
@@ -43,11 +43,11 @@
 				    <tr th:each="p: ${productlines}">
 				      <td th:text="${p.productLine}"></td>
 				      <td th:text="${p.textDescripton}"></td>
-				      <td th:text="${p.htmlDescription}"></</td>
+				      <td th:text="${p.htmlDescription}"></td>
 				      <td th:text="${p.image}"><img th:src="@{/img/noimageavaiable.png}" class="img-thumbnail imageline" alt="..."></td>
 				      <td>
-				      <!--  	<a class="btn btn-warning" th:href="@{/lineaproducto/editar/}+${p.productLine}"><i class="fas fa-edit"></i></a>
-				      	<a class="btn btn-danger" th:href="@{/lineaproducto/borrar/}+${p.productLine}"><i class="far fa-trash-alt"></i></a>-->
+				      	<a class="btn btn-warning" th:href="@{/lineaproducto/editar/}+${p.productLine}"><i class="fas fa-edit"></i></a>
+				      	<a class="btn btn-danger" th:href="@{/lineaproducto/borrar/}+${p.productLine}"><i class="far fa-trash-alt"></i></a>
 				      </td>
 				    </tr>				  
 				  </tbody>
