--- a/GrupoPV_ProjectFinal/src/main/resources/templates/listarproductos.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/listarproductos.html
@@ -19,7 +19,7 @@
 						<h2><i class="fab fa-dropbox fa-lg"></i>&nbsp;Lista de productos</h2>
 					</div>
 					<div class="p-2 bd-highlight">
-						<button type="button" class="btn btn-info"><i class="fas fa-plus"></i>&nbsp;Crear producto</button>
+						<a class="btn btn-info" th:href="@{/producto/nuevo}"><i class="fas fa-plus"></i>&nbsp;Create producto</a>
 					</div>
 					<div class ="ml-auto p-2 bd-highlight">
 						<form class="form-inline">
@@ -44,82 +44,23 @@
 				    </tr>
 				  </thead>
 				  <tbody>
-				    <tr>
-				      <th scope="row">1</th>
-				      <td>Mark</td>
-				      <td>Otto</td>
-				      <td>@mdo</td>
-				      <td>Mark</td>
-				      <td>Otto</td>
-				      <td>@mdo</td>
-				      <td>@mdo</td>
-				      <td>@twitter</td>
-				      <td>
-				      	<button type="button" class="btn btn-warning"><i class="fas fa-edit"></i></button>
-				      	<button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
-				      </td>
-				    </tr>
-				    <tr>
-				      <th scope="row">2</th>
-				      <td>Jacob</td>
-				      <td>Thornton</td>
-				      <td>@fat</td>
-				      <td>Jacob</td>
-				      <td>Thornton</td>
-				      <td>@fat</td>
-				      <td>@fat</td>
-				      <td>@fat</td>
+				    <tr th:each="p: ${products}">
 				      
+				      <td th:text="${p.productCode}"></td>
+				      <td th:text="${p.productName}"></td>
+				      <td th:text="${p.productScale}"></td>
+				      <td th:text="${p.productVendor}"></td>
+				      <td th:text="${p.productDescripton}"></td>
+				      <td th:text="${p.quantityInStock}"></td>
+				      <td th:text="${p.buyPrice}"></td>
+				      <td th:text="${p.msrp}"></td>
 				      <td>
-				      	<button type="button" class="btn btn-warning"><i class="fas fa-edit"></i></button>
-				      	<button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
+				      	<a class="btn btn-warning" th:href="@{/producto/editar/}+${p.productCode}"><i class="fas fa-edit"></i></a>
+				      	<a class="btn btn-danger" th:href="@{/producto/borrar/}+${p.productCode}"><i class="far fa-trash-alt"></i></a>
 				      </td>
 				    </tr>
-				    <tr>
-				      <th scope="row">3</th>
-				      <td>Larry</td>
-				      <td>the Bird</td>
-				      <td>@twitter</td>
-				      <td>Larry</td>
-				      <td>the Bird</td>
-				      <td>@twitter</td>
-				      <td>@twitter</td>
-				      <td>@twitter</td>
-				      <td>
-				      	<button type="button" class="btn btn-warning"><i class="fas fa-edit"></i></button>
-				      	<button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
-				      </td>
-				    </tr>
-				    <tr>
-				      <th scope="row">3</th>
-				      <td>Larry</td>
-				      <td>the Bird</td>
-				      <td>@twitter</td>
-				      <td>Larry</td>
-				      <td>the Bird</td>
-				      <td>@twitter</td>
-				      <td>@twitter</td>
-				      <td>@twitter</td>
-				      <td>
-				      	<button type="button" class="btn btn-warning"><i class="fas fa-edit"></i></button>
-				      	<button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
-				      </td>
-				    </tr>
-				    <tr>
-				      <th scope="row">3</th>
-				      <td>Larry</td>
-				      <td>the Bird</td>
-				      <td>@twitter</td>
-				      <td>Larry</td>
-				      <td>the Bird</td>
-				      <td>@twitter</td>
-				      <td>@twitter</td>
-				      <td>@twitter</td>
-				      <td>
-				      	<button type="button" class="btn btn-warning"><i class="fas fa-edit"></i></button>
-				      	<button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
-				      </td>
-				    </tr>
+				    
+				   
 				  </tbody>
 				</table>
 			</div>
